--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: nandeuserbot
+        password: rosif123_
     - name: Build and Publish to Dockerhub
       uses: docker/build-push-action@v2
       with:
@@ -23,7 +23,7 @@ jobs:
         file: ./Dockerfile
         platforms: linux/amd64
         push: true
-        tags: biansepang/weebproject:buster
+        tags: nandeuserbot/shicy:buster
         
     - name: send telegram message
       run: |
